syntax = "proto3";

option csharp_namespace = "MyGreetingService.Client";


service WorkerIntegration {
	rpc GetWorkerStream (EmptyMessage) returns (stream WorkerAction);

	rpc GetWorkers(EmptyMessage) returns (WorkerList);

	rpc CreateWorker (WorkerMessage) returns (EmptyMessage); // Action.Create
	rpc UpdateWorker (WorkerMessage) returns (EmptyMessage); //	Action.Update	Тут возвращать новый список или обновленного пользователя?
	rpc DeleteWorker (WorkerMessage) returns (EmptyMessage); // Action.Delete
}

message EmptyMessage
{

}

message WorkerAction
{
	WorkerMessage worker = 1;
	Action actionType = 2;
}

message WorkerMessage
{
	string LastName = 2;
	string FirstName = 3;
	string MiddleName = 4;
	int64 Birthday = 5;
	Sex Sex = 6;
	bool HaveChildren = 7;
}

message WorkerList {
  repeated WorkerMessage workers = 1;	// добавил workers чтобы получить список WorkerMessage
}

enum Sex {
	DefaultSex = 0;
	Male = 1;
	Female = 2;
}

enum Action {
	DefaultAction = 0;
	Create = 1;
	Update = 2;
	Delete = 3;
}